# EAPRouter

./: .gitignore  README.md  env_benchmark.py  main.py  main_lab.py  pyproject.toml  security_benchmark.py
eaprouter/agent/: base.py  donothing.py  person.py
eaprouter/config/: config.py
eaprouter/contrib/agent/: __init__.py  commons_tragedy_agent.py  llm_donor_agent.py  prisoners_dilemma_agent.py  public_goods_agent.py  trust_game_agent.py  volunteer_dilemma_agent.py
eaprouter/contrib/env/: __init__.py  commons_tragedy.py  economy_space.py  endowment_effect.py  event_space.py  global_information.py  implicit_association_test.py  prisoners_dilemma.py  public_goods.py  reputation_game.py  self_enhancement.py  self_reference_effect.py  simple_social_space.py  trust_game.py  volunteer_dilemma.py
eaprouter/env/: __init__.py  base.py  router_base.py  router_eap.py  router_plan_execute.py  router_react.py  router_search_tool.py  router_two_tier_plan_execute.py  router_two_tier_react.py
eaprouter/logger/: __init__.py
eaprouter/society/: __init__.py  helper.py  models.py  society.py
eaprouter/storage/: __init__.py
simframework/agent/: base.py  donothing.py  person.py
simframework/config/: config.py
simframework/contrib/env/: __init__.py  (+14 more)
simframework/env/: base.py  router_base.py  router_codegen.py  router_plan_execute.py  router_react.py  router_search_tool.py  router_two_tier_plan_execute.py  router_two_tier_react.py
simframework/logger/: __init__.py
simframework/society/: __init__.py  helper.py  models.py  society.py
simframework/storage/: __init__.py
(+42 files in other folders)
